--- a/css/modal.css
+++ b/css/modal.css
@@ -2,9 +2,10 @@
   position: absolute;
   z-index: 9999;
   background-color: #000;
-  /* display: none; */
+  display: none;
   height: 100vh;
   width: 100vw;
+  overflow-y: auto;
 }
 
 .modal-content {
@@ -19,6 +20,11 @@
 .btn-close-modal {
   top: 1.3rem;
   right: 1.3rem;
+  transition: opacity 200ms ease-in-out;
+}
+
+.btn-close-modal:hover {
+  opacity: .65;
 }
 
 ul > li::before {
